# generate-list

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
generate_list/: __about__.py  main.py
links/: links.nt
