[project]
name = "generate-list"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dynamic = ["version"]


[tool.hatch]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"



[tool.ruff]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    # "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.isort]
force-wrap-aliases = true
combine-as-imports = true
